Align with refresh SEP and harden credential providers